test/libsolidity/syntaxTests/functionCalls/magic_not_callable.sol
contract C {
    uint a = msg(1000);
}
// ----
// TypeError 5704: (26-35): This expression is not callable.
